sumo/tests/duarouter/alternatives/style2_input/errors/xml/no_begin/errors.duarouter
Error: Expected comment or processing instruction
 In file 'input_alts.rou.alt.xml'
 At line/column 5/4.

Quitting (on error).
